--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.7.4
 beautifulsoup4==4.3.2
 click==3.3
 Flask==0.10.1
+Flask-Bootstrap==3.0.3.1
 Flask-Migrate==1.3.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
